--- a/study-styles.css
+++ b/study-styles.css
@@ -152,11 +152,14 @@
     height: 100%;
     text-align: center;
     transition: transform 0.6s;
+    -webkit-transition: -webkit-transform 0.6s;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .flashcard.flipped .flashcard-inner {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 .flashcard-front,
@@ -179,8 +182,14 @@
     border: 2px solid var(--border-color);
 }
 
+.flashcard-front {
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+}
+
 .flashcard-back {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 .card-category {
@@ -1068,19 +1077,6 @@
     .flashcard-back {
         transition: opacity 0.6s;
     }
-}
-
-/* Fix for flashcard visibility */
-.flashcard-front {
-    transform: rotateY(0deg);
-}
-
-.flashcard.flipped .flashcard-front {
-    visibility: hidden;
-}
-
-.flashcard.flipped .flashcard-back {
-    visibility: visible;
 }
 
 /* Code Examples in Flashcards */
